Application API added.
